# DeerCode

./: langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
.trae/documents/: 修复文件操作后文件消失的bug.md  修改前端文件资源管理器.md  实现左中右结构的AI IDE UI.md
src/backend/: app.py
src/codespace/: README.md  test_websocket.js
src/codespace/src/: test1.py
src/deercode/: __init__.py
src/deercode/agents/: coding_agent.py
src/deercode/prompts/: coding_agent.py
src/deercode/tools/: bash_tool.py  grep_tool.py  ls_tool.py  text_editor.py  todo_tools.py  tree_tool.py
src/front/: package-lock.json  package.json
src/front/src/: App.css  App.tsx  index.css
src/front/src/components/: FileTree.css  FileTree.tsx  IDEContainer.css  IDEContainer.tsx  LeftPanel.css  LeftPanel.tsx  MainPanel.css  MainPanel.tsx  RightPanel.css  RightPanel.tsx  Terminal.css  Terminal.tsx
src/front/src/front/: package-lock.json
